test/should-fail/vsgc393.f3
/*
 * Regression test: VSGC-393:functions aren't checked for return -- CPU goes to 100%
 *
 * @test/fail
 */
function foo() : Integer {} 

var bar = foo(); 
